rm arrow bullet points, fix email underline on safari

--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -48,6 +48,7 @@
     #email {
       background-color: rgba(10, 10, 10, 0.25);
       padding: 0.125em .35em;
+      text-decoration: none;
     }
   }
 
@@ -60,18 +61,9 @@
   }
 
   ul {
-    list-style: none;
-    padding-left: 2em;
-  
     li {
       &:not(:last-child) {
         margin-bottom: .125em;
-      }
-
-      &::before {
-        position: absolute;
-        content: '🠚';
-        transform: translate(-1.25em, -.0625em);
       }
     }
 
